codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_parent_status@windows.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Check recently modified functions for compatibility                           "
"                                                                                "
"  gpt-5.5 default                                                               "
"  /tmp/project   Side from main thread · main needs input · Ctrl+C to return    "
