codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_continue_preparing_info_cell.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: preparing
---
• Preparing continuation recap...
