codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_fork_with_thread_but_no_rollout_shows_starting_error.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "lines_to_single_string(&cells[0])"
---
■ This session is still starting and cannot be forked yet. Send a message first, then try /fork again.
